crates/keron-lang/tests/corpus/errors/check/match_arm_body_type_mismatch.keron
type Mode = "on" | "off"

fn flag(m: Mode): Int {
  match m {
    "on" => 1,
    "off" => "zero",
  }
}
